# Repository-Specific-SQL-Cypher-Query-Generator

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: profiles.yaml
docker/: docker-compose.neo4j.yml
docs/: documentation.md  tutorial_real_run.md  zero_to_hero_study_handbook.md
docs/tutorials/: 00_orientation_and_workflow.md  01_configuration_and_profiles.md  02_data_preparation_pipeline.md  03_sql_to_cypher_labeling.md  04_schema_retrieval_and_baselines.md  05_qlora_fine_tuning.md  06_inference_pipeline.md  07_evaluation_and_judging.md  08_neo4j_graph_demo.md  09_real_runs_and_artifact_reading.md  10_testing_reliability_and_troubleshooting.md  README.md
notebooks/: 00_intro_and_problem_framing.ipynb  01_text2sql_and_text2cypher_foundations.ipynb  02_dataset_deep_dive_and_splitting.ipynb  03_sql_to_cypher_hybrid_labeling.ipynb  04_baselines_prompt_only.ipynb  05_qlora_finetuning_granite3b.ipynb  06_evaluation_and_llm_judging.ipynb  07_inference_pipeline_and_examples.ipynb  08_neo4j_graph_demo.ipynb
scripts/: build_cypher_labels.py  build_notebooks.py  evaluate.py  infer.py  prepare_data.py  run_baselines.py  run_end_to_end.py  run_neo4j_demo.py  train_qlora.py
src/repo_query_gen/: __init__.py  baselines.py  config.py  cypher.py  data_prep.py  evaluation.py  inference.py  neo4j_demo.py  pipeline.py  schema_retrieval.py  training.py  types.py  utils.py  visualize.py
tests/: test_cypher.py  test_data_prep.py  test_inference_validation.py  test_schema_retrieval.py  test_training_backend.py
(+4 files in other folders)
