[project]
name = "repository-specific-sql-cypher-query-generator"
version = "0.1.0"
description = "Tutorial-first local Text-to-SQL and Text-to-Cypher fine-tuning system"
readme = "README.md"
requires-python = ">=3.12.10,<3.13"
dependencies = [
  "accelerate>=1.8.1",
  "bert-score>=0.3.13",
  "bitsandbytes>=0.46.0",
  "datasets>=4.0.0",
  "evaluate>=0.4.3",
  "ipykernel>=6.29.5",
  "jupyter>=1.1.1",
  "loguru>=0.7.3",
  "matplotlib>=3.10.3",
  "mlflow>=3.1.0",
  "nbformat>=5.10.4",
  "neo4j>=5.28.1",
  "networkx>=3.5",
  "nltk>=3.9.1",
  "numpy>=2.2.6",
  "ollama>=0.6.0",
  "pandas>=2.3.0",
  "peft>=0.16.0",
  "pydantic>=2.11.7",
  "pydantic-settings>=2.10.1",
  "python-dotenv>=1.1.1",
  "pyyaml>=6.0.2",
  "requests>=2.32.4",
  "rouge-score>=0.1.2",
  "sacrebleu>=2.5.1",
  "scikit-learn>=1.7.0",
  "seaborn>=0.13.2",
  "sentencepiece>=0.2.0",
  "sqlglot>=27.1.0",
  "torch>=2.8.0",
  "tqdm>=4.67.1",
  "trl>=0.25.0",
  "transformers>=4.53.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.2",
]
unsloth = [
  "unsloth",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]
